# AI_recognition_API

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  requests_main.py
json_requests/: create_encoding_left.json  create_encoding_right.json  result.json
